Fixed cpath-client initialization (using custom PC2 URL); split test and prod. properties; deleted pathwayCommonsURLStr, pcVizURLStr - but there are TODOs in the JSP to insert spring properties instead...