@@ -33,12 +33,15 @@
 		</pluginManagement>
 		<plugins>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>tomcat-maven-plugin</artifactId>
-				<version>1.1</version>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
 				<configuration>
 					<url>http://localhost:8080/manager</url>
 					<server>localhost</server>
+					<systemProperties>
+						<JAVA_OPTS>-Xms256m -Xmx8g -XX:MaxPermSize=256m</JAVA_OPTS>
+					</systemProperties>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -50,23 +53,14 @@
 			<!--<name>BioPAX Repository at Sourceforge</name>-->
 			<!--<url>http://biopax.sourceforge.net/m2repo/releases/</url>-->
 		<!--</repository>-->
-		<!--<repository>-->
-			<!--<id>biopax.snapshots</id>-->
-			<!--<name>BioPAX Repository at Sourceforge</name>-->
-			<!--<url>http://biopax.sourceforge.net/m2repo/snapshots/</url>-->
-            <!--<snapshots>-->
-                <!--<enabled>true</enabled>-->
-            <!--</snapshots>-->
-        <!--</repository>-->
-        <repository>
-            <id>causality.repo</id>
-            <name>Repository of BioPAX Causality Framework</name>
-            <url>http://cbio.mskcc.org/~ozgun/m2repo/</url>
+		<repository>
+			<id>biopax.snapshots</id>
+			<name>BioPAX Repository at Sourceforge</name>
+			<url>http://biopax.sourceforge.net/m2repo/snapshots/</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-
 		<repository>
 			<id>ossrh</id>
 			<name>OSSRH Repository</name>
